# fast-lio2-course-homework

./: README.md
hw13/: Homework13说明.txt  codes.cpp
hw14/: CMakeLists.txt  kalmanfilter.cpp
hw19/: hw19_UpdateCovariance.cpp  hw19_myCodes.cpp
hw2/: BCH_verify.cpp  CMakeLists.txt  tmp.cpp
hw4/: imuIntegal.cpp  pointCouldFiltering.cpp
